# sales_promoter_resignation_analysis

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
models/: gradientboosting_best_model.joblib  knn_best_model.joblib  logisticregression_best_model.joblib  svm_best_model.joblib  xgboost_best_model.joblib
notebooks/: 1.0-age-data-exploration.ipynb  1.0-age-model-training.ipynb  1.0-data-exploration.ipynb  1.0-model-training.ipynb
sales_promoter_resignation_analysis/: __init__.py  dataset.py  features.py  plots.py
sales_promoter_resignation_analysis/modeling/: predict.py  train.py
