[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sales_promoter_resignation_analysis"
version = "0.0.1"
description = "Analize data to identify turnover patterns and propose strategies to reduce this resignation rate."
authors = [
  { name = "Alonso Gonzalez Escobedo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["sales_promoter_resignation_analysis"]
include = ["pyproject.toml", "sales_promoter_resignation_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sales_promoter_resignation_analysis"]
force-sort-within-sections = true

